reports/session0/0_getting_started.err.log
Traceback (most recent call last):
  File "/Users/nhlist/opt/miniconda3/envs/bb1000/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/nhlist/opt/miniconda3/envs/bb1000/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/nhlist/opt/miniconda3/envs/bb1000/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/nhlist/opt/miniconda3/envs/bb1000/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/nhlist/opt/miniconda3/envs/bb1000/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/Users/nhlist/opt/miniconda3/envs/bb1000/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/nhlist/opt/miniconda3/envs/bb1000/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/nhlist/opt/miniconda3/envs/bb1000/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# We have seen that <object> <operator> <object> is a legit expression, but how about
3 + 
------------------

[0;36m  Cell [0;32mIn[3], line 2[0;36m[0m
[0;31m    3 +[0m
[0m        ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (1013232980.py, line 2)

